<resources>
    <string name="app_name" translatable="false">WarsApp</string>
    <string name="hint">Password</string>
    <string name="language">Language</string>
    <string name="language_placeholder" translatable="false">-</string>
    <string name="rng">RNG</string>
    <string name="login">Login</string>
    <string name="english">English</string>
    <string name="croatian">Croatian</string>
    <string name="language_updated" translatable="false">Language updated</string>
    <string name="no_data_to_show">No Data to Show</string>
    <string name="generate_number">Generate Number</string>
    <string name="return_result">Return Result</string>
    <string name="empty_text">There is nothing here</string>
    <string name="please_wait">Please wait</string>
    <string name="sorry_something_went_wrong">Sorry something went wrong</string>
    <string name="name">Name:</string>
    <string name="birth_year">BirthYear:</string>
    <string name="gender">Gender:</string>
    <string name="skin_color">Skin Color:</string>
    <string name="actor_details">Actor Details</string>
    <string name="movies">Movies</string>
    <string name="wrong_input">Wrong Input</string>
    <string name="sucess">Success Login!</string>
    <string name="demo_login">Demo Login</string>
</resources>